# orcas

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: default_config.yaml
docs/: ARCHITECTURE.md  INSTALLATION.md  USAGE.md
scripts/: download_model.py  install.sh
src/: __init__.py  cli.py  command_parser.py  config.py  executor.py  main.py  model_manager.py  security.py
