[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orcas-cli"
version = "0.1.0"
description = "Transform natural language into safe bash commands using local model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["cli", "ai", "bash", "natural-language", "llm"]
authors = [
  {name = "Eric Moghioros", email = "eric.moghioros000@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "llama-cpp-python>=0.2.0",
  "pyyaml>=6.0",
  "click>=8.0.0",
  "colorama>=0.4.6",
  "prompt-toolkit>=3.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
]

[project.scripts]
orcas = "cli:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true